mejora acerca de

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
                 </ul>
               </div>
             </div>
-              <p>Bioingeniero trabajando en el campo del desarrollo web, con dos años de experiencia. Interesado principalmente en <em>backend</em>, aunque en actualidad también trabaje con <em>frontend</em>. En empleo actual hago uso de <em>codeigniter 3, Jquery, PostgreSQL y VueJS</em>. Siempre apuntando a la formación continua, busco aprender nuevas tecnologías. Hoy en día estoy aprendiendo conceptos de <em>microservicios</em>, haciendo uso de <em>Serverless con Vercel</em> usando <em>NextJS.</em></p>
-        
+              <p>Bioingeniero trabajando en el campo del desarrollo web, con dos años de experiencia profesional. Al margen de los lenguajes conocidos, siempre estuve interesado en comprender el funcionamiento de la web, buscando la integración de conceptos. Esta búsqueda de integración me llevó a aprender de la historia de la <em>web</em>, los conceptos de envío de datos al servidor y refresco de páginas, el significado de <em>Single Page Application</em>, la importancia de la introducción de <em>AJAX</em> en los navegadores, el rol fundamental de las <em>Apis</em> y <em>endpoints</em> en los tiempos actuales. Siempre creí que el lenguaje de programación es en realidad una herramienta, y que es más importante conocer estos conceptos correctamente estos conceptos antes de cualquier desarrollo. Interesado principalmente en <em>backend</em>, aunque en actualidad también trabaje con <em>frontend</em>. En empleo actual hago uso de <em>codeigniter 3, Jquery, PostgreSQL y VueJS</em>, con mucho de uso de las herramientas de desarrollador de los navegadores, donde utilizo las pestañas de consola, los elementos de red, las fuentes, los elementos, la aplicación. Siempre apuntando a la formación continua, busco aprender nuevas tecnologías. Hoy en día estoy aprendiendo conceptos de <em>microservicios</em>, haciendo uso de <em>Serverless con Vercel</em> usando <em>NextJS.</em> o funciones <em>Lambda</em> en <em>AWS</em></p>     
           </div>
         </div>
 
@@ -131,7 +130,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="10" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="4" class="purecounter"></span>
               <p>Cursos y certificados</p>
             </div>
           </div>
@@ -139,7 +138,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="10" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="4" class="purecounter"></span>
               <p>Proyectos profesionales</p>
             </div>
           </div>
@@ -147,7 +146,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="10" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="4" class="purecounter"></span>
               <p>Horas de programación</p>
             </div>
           </div>
@@ -155,7 +154,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="10" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="4" class="purecounter"></span>
               <p>Años en el desarrollo web</p>
             </div>
           </div>
@@ -163,7 +162,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="10" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="4" class="purecounter"></span>
               <p>Premios y reconocimientos conseguidos</p>
             </div>
           </div>
