mejoramiento seccion tecnologías

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
       </div>
     </section><!-- End About Section -->
 
+
+
     <!-- ======= Facts Section ======= -->
    <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
@@ -171,6 +173,78 @@
 
       </div>
     </section><!-- End Facts Section -->
+
+    <section id="tecnicos" class="resume">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Conocimientos técnicos</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="resume-item pb-0">
+              <h4>Backend</h4>
+              <ul>
+                <li>Patrón de diseño modelo vista controlador</li>
+                <li>Serverless y arquitectura tradicional(Servidor escuchando)</li>
+                <li>Frameworks y librerías</li>
+                <li>Modelado y creación de <em>Application Programming Interfaces (API)</em></li>
+                <li>Manipulación de sesiones</li>
+                <li>Control de usuarios con <em>JSON Web Tokens(JWT)</em></li>
+                <li>Consumo de APIs</li>
+                <li>Uso de <em>Structured Query Language(SQL)</em></li>
+                <li>Base de datos</li>
+                <li>Autorización y autenticación</li>
+                <li>Encriptación, cifrado y <em>hasheado</em> de datos</li>
+                <li>Base de datos relacionales y no relacionales</li>
+              </ul>
+              <h5>Tecnologías</h5>
+              <ul>
+                <li>NodeJS</li>
+                <li>Php</li>
+                <li>Codeigniter</li>
+                <li>ExpressJS</li>
+                <li>Funciones lambda AWS</li>
+                <li>Funciones en Vercel</li>
+                <li>Base de datos MySql</li>
+                <li>Base de datos PostgresSQL</li>
+                <li>Base de datos Mongo</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="resume-item">
+              <h4>Frontend</h4>
+              <ul>
+                <li><em>Server Side Rendering(SSR)</em> y <em>Client Side Rendering(CSR)</em></li>
+                <li>Tareas de desarrollo y mantenimiento </li>
+                <li>Nuevos desarrollos, fix de bugs, permanente participación en nuevos desarrollos aportando ideas</li>
+                <li>Sistemas principales desarrollados en Codeigniter 3 y Jquery usando PostgreSQL</li>
+                <li>Actualización a Codeigniter 4 de algunos sistemas</li>
+                <li>Nuevo desarrollo actual realizando en NodeJS con ExpressJS usando MongoDB </li>
+                <li>Comunicación entre los sistemas</li>
+                <li>Tecnologías usadas: <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="resume-item">
+              <h4>Computación e informática</h4>
+              <ul>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, laudantium, et, accusantium pariatur omnis commodi ipsum natus harum assumenda ullam dicta illo voluptate. Corporis animi quaerat eos fugit porro quibusdam?</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, laudantium, et, accusantium pariatur omnis commodi ipsum natus harum assumenda ullam dicta illo voluptate. Corporis animi quaerat eos fugit porro quibusdam?</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, laudantium, et, accusantium pariatur omnis commodi ipsum natus harum assumenda ullam dicta illo voluptate. Corporis animi quaerat eos fugit porro quibusdam?</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Conocimientos técnicos -->
+
+
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
