--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <h4>Backend</h4>
               <ul>
                 <li>Patrón de diseño modelo vista controlador</li>
-                <li>Serverless y arquitectura tradicional(Servidor escuchando)</li>
+                <li>Serverless y arquitectura monolítica</li>
                 <li>Frameworks y librerías</li>
                 <li>Modelado y creación de <em>Application Programming Interfaces (API)</em></li>
                 <li>Manipulación de sesiones</li>
@@ -201,15 +201,58 @@
               </ul>
               <h5>Tecnologías</h5>
               <ul>
-                <li>NodeJS</li>
-                <li>Php</li>
-                <li>Codeigniter</li>
-                <li>ExpressJS</li>
-                <li>Funciones lambda AWS</li>
-                <li>Funciones en Vercel</li>
-                <li>Base de datos MySql</li>
-                <li>Base de datos PostgresSQL</li>
-                <li>Base de datos Mongo</li>
+                <li>NodeJS
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Php
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Codeigniter
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                </li>
+                <li>ExpressJS
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Postman
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                </li>
+                <li>Funciones lambda AWS
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
+                  </div>
+                </li>
+                <li>Funciones en Vercel (NextJS)
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
+                  </div>
+                </li>
+                <li>Base de datos MySql
+                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Base de datos PostgresSQL
+                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Base de datos Mongo
+                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
@@ -219,13 +262,41 @@
               <h4>Frontend</h4>
               <ul>
                 <li><em>Server Side Rendering(SSR)</em> y <em>Client Side Rendering(CSR)</em></li>
-                <li>Tareas de desarrollo y mantenimiento </li>
-                <li>Nuevos desarrollos, fix de bugs, permanente participación en nuevos desarrollos aportando ideas</li>
-                <li>Sistemas principales desarrollados en Codeigniter 3 y Jquery usando PostgreSQL</li>
-                <li>Actualización a Codeigniter 4 de algunos sistemas</li>
-                <li>Nuevo desarrollo actual realizando en NodeJS con ExpressJS usando MongoDB </li>
-                <li>Comunicación entre los sistemas</li>
-                <li>Tecnologías usadas: <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
+                <li>Frameworks y librerías</li>
+                <li>Interpretación de funcionamiento de un navegador: sitios estáticos vs dinámicos</li>
+                <li>Conocimiento de significado de <em>Asynchronous Javascript and XML</em> y su funcionamiento</li>
+                <li><em>Single Page Application(SPA)</em></li>
+                <li>Herramientas de desarrollo de los navegadores: uso de pestañas de consola, red, elementos, estilos, aplicación</li>
+                <li>Estilos</li>
+                <li>Conocimiento y manipulación de <em>Document Object Model(DOM)</em> y DOM virtual</li>
+              </ul>
+              <h5>Tecnologías</h5>
+              <ul>
+                <li>HTML,CSS y JS
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Jquery
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Axios
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-warning" style="width: 66%">Intermedio</div>
+                  </div>
+                </li>
+                <li>React
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
+                  </div>
+                </li>
+                <li>Vue
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-warning" style="width: 66%">Intermedio</div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
@@ -233,9 +304,17 @@
             <div class="resume-item">
               <h4>Computación e informática</h4>
               <ul>
-                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, laudantium, et, accusantium pariatur omnis commodi ipsum natus harum assumenda ullam dicta illo voluptate. Corporis animi quaerat eos fugit porro quibusdam?</li>
-                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, laudantium, et, accusantium pariatur omnis commodi ipsum natus harum assumenda ullam dicta illo voluptate. Corporis animi quaerat eos fugit porro quibusdam?</li>
-                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, laudantium, et, accusantium pariatur omnis commodi ipsum natus harum assumenda ullam dicta illo voluptate. Corporis animi quaerat eos fugit porro quibusdam?</li>
+                <li>Comprensión de funcionamiento de los sistemas operativos</li>
+                <li>Asignación de puertos</li>
+                <li>Funcionamiento de servicios</li>
+              </ul>
+              <h5>Tecnologías</h5>
+              <ul>
+                <li>Windows
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
