--- a/index.html
+++ b/index.html
@@ -201,55 +201,55 @@
               </ul>
               <h5>Tecnologías</h5>
               <ul>
-                <li>NodeJS
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li class="li-hover">NodeJS<img class="imgTecnologias" src="./assets/img/icons/icons8-nodejs.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
-                <li>Php
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Php<img class="imgTecnologias" src="./assets/img/icons/icons8-php-40.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
-                <li>Codeigniter
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
-                  </div>
-                </li>
-                </li>
-                <li>ExpressJS
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
-                  </div>
-                </li>
-                <li>Postman
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Codeigniter<img class="imgTecnologias" src="./assets/img/icons/icons8-codeigniter.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
                 </li>
-                <li>Funciones lambda AWS
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>ExpressJS<img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Postman<img class="imgTecnologias" src="./assets/img/icons/icons8-postman-api-64.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                </li>
+                <li>Funciones lambda AWS<img class="imgTecnologias" src="./assets/img/icons/icons8-amazon-web-services-48.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
                   </div>
                 </li>
-                <li>Funciones en Vercel (NextJS)
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Funciones en Vercel (NextJS)<img class="imgTecnologias" src="./assets/img/icons/vercel.svg" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
                   </div>
                 </li>
-                <li>Base de datos MySql
-                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Base de datos MySql<img class="imgTecnologias" src="./assets/img/icons/icons8-mysql-48.png" alt="">
+                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
-                <li>Base de datos PostgresSQL
-                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Base de datos PostgresSQL<img class="imgTecnologias" src="./assets/img/icons/icons8-postgresql-48.png" alt="">
+                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
-                <li>Base de datos Mongo
-                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Base de datos Mongo<img class="imgTecnologias" src="./assets/img/icons/icons8-mongodb.png" alt="">
+                                    <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
@@ -272,28 +272,33 @@
               </ul>
               <h5>Tecnologías</h5>
               <ul>
-                <li>HTML,CSS y JS
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>HTML,CSS y JS<img class="imgTecnologias" src="./assets/img/icons/icons8-html-5-48.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
-                <li>Jquery
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Jquery<img class="imgTecnologias" src="./assets/img/icons/icons8-jquery.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
-                <li>Axios
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Bootstrap<img class="imgTecnologias" src="./assets/img/icons/icons8-bootstrap-48.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
+                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                  </div>
+                </li>
+                <li>Axios<img class="imgTecnologias" src="./assets/img/icons/axios.svg" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-warning" style="width: 66%">Intermedio</div>
                   </div>
                 </li>
-                <li>React
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>React<img class="imgTecnologias" src="./assets/img/icons/icons8-react-80.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
                   </div>
                 </li>
-                <li>Vue
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Vue<img class="imgTecnologias" src="./assets/img/icons/icons8-vuejs-48.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-warning" style="width: 66%">Intermedio</div>
                   </div>
                 </li>
@@ -310,8 +315,8 @@
               </ul>
               <h5>Tecnologías</h5>
               <ul>
-                <li>Windows
-                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 15px">
+                <li>Windows<img class="imgTecnologias" src="./assets/img/icons/icons8-windows-48.png" alt="">
+                  <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
                   </div>
                 </li>
@@ -324,70 +329,6 @@
     </section><!-- End Conocimientos técnicos -->
 
 
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>tecnologías</h2>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Codeigniter <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">NodeJS<i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PostgresSQL<i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Serverless <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Git <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
