--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
       <h1 id="mainNombre">Fabio Squizzato</h1>
       <p><span class="typed" data-typed-items="Developer, Fix de bugs, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos"></span></p>
       <div class="social-links">
-        <a href="https://facebook.com/fabio21" target=”_blank” ><i class="bx bxl-facebook"></i></a>
-        <a href="https://instagram.com/fabios15" target=”_blank” class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/squizzato-fabio/" target=”_blank” class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.hackerrank.com/squizzato_fabio" target=”_blank” class="linkedin"><img class="imgTecnologias" src="./assets/img/icons/hackerrank.svg" alt="" srcset=""></a>
+        <a href="https://facebook.com/fabio21" target=”_blank” ><img class="imgTecnologias" src="./assets/img/icons/icons8-facebook-48.png" alt="" srcset=""></a>
+        <a href="https://instagram.com/fabios15" target=”_blank” class="instagram"><img class="imgTecnologias" src="./assets/img/icons/icons8-instagram-48.png" alt="" srcset=""></a>
+        <a href="https://www.linkedin.com/in/squizzato-fabio/" target=”_blank” class="linkedin"><img class="imgTecnologias" src="./assets/img/icons/icons8-linkedin-48.png" alt="" srcset=""></a>
+        <a href="https://github.com/fabio2100" target=”_blank” class="linkedin"><img class="imgTecnologias" src="./assets/img/icons/icons8-github-50.png" alt="" srcset=""></a>
+        <a href="https://www.hackerrank.com/squizzato_fabio" target=”_blank” class="linkedin"><img class="imgTecnologias" src="./assets/img/icons/icons8-hackerrank-is-a-technology-company-that-focuses-on-competitive-programming-48.png" alt="" srcset=""></a>
         <a href="https://www.mathworks.com/matlabcentral/profile/authors/7845291?s_tid=gn_comm" target=”_blank” class="linkedin"><img class="imgTecnologias" src="./assets/img/icons/icons8-matlab-48.png" alt="" srcset=""></a>
         <a href="https://www.w3profile.com/fabio21" target=”_blank” class="linkedin"><img class="imgTecnologias" src="./assets/img/icons/w3school.png" alt="" srcset=""></a> 
       </div>
@@ -858,11 +859,9 @@
       <h3>Fabio Squizzato</h3>
       <p>No dudes en contactarme ante cualquier inquietud.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://facebook.com/fabio21" target=”_blank” class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://instagram.com/fabios15" target=”_blank” class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/squizzato-fabio/" target=”_blank” class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
