--- a/app-weather.html
+++ b/app-weather.html
@@ -48,7 +48,7 @@
               <h3>App para conocer el clima</h3>
               <ul>
                 <li><strong> Tecnologías <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/bulma-48.png"/></li>
-                <li><strong> Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/vercel.svg"/>Express</li>
+                <li><strong> Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/vercel.svg"/><img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt=""></li>
                 <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://clima-back.vercel.app/clima.html">https://clima-back.vercel.app/clima.html</a></li>
                 <li><strong>Url del repositorio Serverless</strong>: <a target="_blank" href="https://github.com/fabio2100/clima-back">https://github.com/fabio2100/clima-back</a></li>
                 <li><strong>Url del repositorio Express</strong>: <a target="_blank" href="https://github.com/fabio2100/clima">https://github.com/fabio2100/clima</a></li>
