--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <li>Actualización a Codeigniter 4 de algunos sistemas</li>
                 <li>Nuevo desarrollo actual realizando en NodeJS con ExpressJS usando MongoDB </li>
                 <li>Comunicación entre los sistemas</li>
-                <li>Tecnologías usadas: <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
+                <li>Tecnologías usadas: <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
               </ul>
             </div>
             <div class="resume-item">
