--- a/posteo-comentarios.html
+++ b/posteo-comentarios.html
@@ -48,7 +48,7 @@
               <h3>Posteo de comentarios</h3>
               <ul>
                 <li><strong>Tecnologías <em>frontend</em></strong><img src="./assets/img/icons/icons8-vuejs-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></li>
-                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/></li>
+                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/><img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt=""></li>
                 <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/blogPequenio">https://github.com/fabio2100/blogPequenio</a></li>
               </ul>
             </div>
