--- a/rest-server-model.html
+++ b/rest-server-model.html
@@ -47,7 +47,7 @@
             <div class="portfolio-info">
               <h3>App para conocer el clima</h3>
               <ul>
-                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/> <img src="./assets/img/icons/icons8-mongodb.png"/> Express </li>
+                <li><strong>Tecnologías <em>backend</em></strong><img src="./assets/img/icons/icons8-nodejs.png"/> <img src="./assets/img/icons/icons8-mongodb.png"/> <img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt=""></li>
                 <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/curso-node-restserver/">https://github.com/fabio2100/curso-node-restserver/</a></li>
               </ul>
             </div>
