--- a/soluciones.html
+++ b/soluciones.html
@@ -47,7 +47,7 @@
             <div class="portfolio-info">
               <h3>Desarrollos y soluciones a <em>bugs</em></h3>
               <ul>
-                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/soluciones>https://github.com/fabio2100/soluciones">https://github.com/fabio2100/soluciones</a></li>
+                <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/soluciones">https://github.com/fabio2100/soluciones</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
