--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
         document.getElementById('visits').innerText = response.value;
     }
     </script>
-    <script async src="https://api.countapi.xyz/hit/https://fabio2100.github.io/curriculum//visits?callback=cb"></script>
+    <script async src="https://api.countapi.xyz/hit/fabio2100.github.io/visits?callback=cb"></script>
 
 </body>
 
