--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Inicio</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Acerca de mi</span></a></li>
-        <li><a href="#tecnicos" class="nav-link scrollto"><i class="bi bi-journals"></i> <span>Conocimientos técnicos</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Curriculum</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#cursos" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Cursos</span></a></li>
-        <li><a href="#idiomas" class="nav-link scrollto"><i class="bx bx-book"></i> <span>Idiomas</span></a></li>
-        <li><a href="#habilidades" class="nav-link scrollto"><i class="bx bx-user-voice"></i> <span>Habilidades</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacto</span></a></li>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span class="lang" key="HOME"></span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span class="lang" key="ABOUT"></span></a></li>
+        <li><a href="#tecnicos" class="nav-link scrollto"><i class="bi bi-journals"></i> <span class="lang" key="KNOWLEDGES"></span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span class="lang" key="RESUME"></span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span class="lang" key="PORTFOLIO"></span></a></li>
+        <li><a href="#cursos" class="nav-link scrollto"><i class="bx bx-server"></i> <span class="lang" key="COURSES"></span></a></li>
+        <li><a href="#idiomas" class="nav-link scrollto"><i class="bx bx-book"></i> <span class="lang" key="LANGUAGES"></span></a></li>
+        <li><a href="#habilidades" class="nav-link scrollto"><i class="bx bx-user-voice"></i> <span class="lang" key="SKILLS">Habilidades</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span class="lang" key="CONTACT"></span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 id="mainNombre">Fabio Squizzato</h1>
-      <p><span class="typed" data-typed-items="Developer, Fix de bugs, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos"></span></p>
+      <p><span class="typed" data-typed-items="Developer, Fix de bugs, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos, Libreries, Database, Logic"></span></p>
       <div class="social-links">
         <a href="https://facebook.com/fabio21" target=”_blank” ><img class="imgTecnologias" src="./assets/img/icons/icons8-facebook-48.png" alt="" srcset=""></a>
         <a href="https://instagram.com/fabios15" target=”_blank” class="instagram"><img class="imgTecnologias" src="./assets/img/icons/icons8-instagram-48.png" alt="" srcset=""></a>
@@ -93,7 +93,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Acerca de mí</h2>
+          <h2 class="lang" key="ABOUT"></h2>
         </div>
 
         <div class="row">
@@ -109,19 +109,19 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Fecha de nacimiento:</strong> <span>21 Mar 1991</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Mendoza, ARG</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Nacionalidad:</strong> <span>Argentina <img src="./assets/img/argentina24.png" alt=""> , Italiana <img src="./assets/img/italy24.png" alt=""> </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="BIRTHDAY"></strong> <span>21 Mar 1991</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="CITY"></strong> <span>Mendoza, ARG</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="NATIONALITY"></strong> <span>Argentina <img src="./assets/img/argentina24.png" alt=""> , Italia <img src="./assets/img/italy24.png" alt=""> </span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>32</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Título:</strong> <span>Bioingeniero</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="AGE"></strong> <span>32</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="DEGREE"></strong> <span>Bioingeniero</span></li>
                 </ul>
               </div>
             </div>
-              <p>Bioingeniero trabajando en el campo del desarrollo web, con dos años de experiencia profesional. Al margen de los lenguajes conocidos, siempre estuve interesado en comprender el funcionamiento de la web, buscando la integración de conceptos. Esta búsqueda de integración me llevó a aprender de la historia de la <em>web</em>, los conceptos de envío de datos al servidor y refresco de páginas, el significado de <em>Single Page Application</em>, la importancia de la introducción de <em>AJAX</em> en los navegadores, el rol fundamental de las <em>Apis</em> y <em>endpoints</em> en los tiempos actuales. Siempre creí que el lenguaje de programación es en realidad una herramienta, y que es más importante conocer estos conceptos correctamente estos conceptos antes de cualquier desarrollo. Interesado principalmente en <em>backend</em>, aunque en actualidad también trabaje con <em>frontend</em>. En empleo actual hago uso de <em>codeigniter 3, Jquery, PostgreSQL y VueJS</em>, con mucho de uso de las herramientas de desarrollador de los navegadores, donde utilizo las pestañas de consola, los elementos de red, las fuentes, los elementos, la aplicación. Siempre apuntando a la formación continua, busco aprender nuevas tecnologías. Hoy en día estoy aprendiendo conceptos de <em>microservicios</em>, haciendo uso de <em>Serverless con Vercel</em> usando <em>NextJS.</em> o funciones <em>Lambda</em> en <em>AWS</em></p>     
+              <p class="lang" key="ABOUT-DESCRIPTION"></p>     
           </div>
         </div>
 
@@ -915,7 +915,8 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="lang.js"></script>
 </body>
 
 </html>
